<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AddTaskActivity">

    <EditText
        android:id="@+id/etTodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="25"
        android:hint="@string/name_of_the_to_do"
        android:maxLength="25"
        android:textColor="@color/design_default_color_primary_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etToAccomplish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/to_finish_when"
        android:maxLength="50"
        app:layout_constraintEnd_toEndOf="@+id/etTodo"
        app:layout_constraintStart_toStartOf="@+id/etTodo"
        app:layout_constraintTop_toBottomOf="@+id/etTodo" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/describe_the_task"
        android:maxLength="100"
        app:layout_constraintEnd_toEndOf="@+id/etToAccomplish"
        app:layout_constraintStart_toStartOf="@+id/etToAccomplish"
        app:layout_constraintTop_toBottomOf="@+id/etToAccomplish" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onClick"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/spinnerStatus"
        app:layout_constraintTop_toBottomOf="@+id/spinnerStatus" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Status"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/spinnerStatus"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Priority"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/etDescription"
        app:layout_constraintTop_toBottomOf="@+id/etDescription" />

    <Spinner
        android:id="@+id/spinnerPriority"
        android:layout_width="98dp"
        android:layout_height="29dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerStatus"
        app:layout_constraintStart_toStartOf="@+id/etDescription"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Spinner
        android:id="@+id/spinnerStatus"
        android:layout_width="161dp"
        android:layout_height="32dp"
        app:layout_constraintEnd_toEndOf="@+id/etDescription"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickCancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/buttonOk"
        app:layout_constraintStart_toStartOf="@+id/spinnerPriority" />

</androidx.constraintlayout.widget.ConstraintLayout>